k8s/chat-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: chat-backend
  name: chat-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: chat-backend
    spec:
      containers:
        - image: localhost:32000/vuechatapi_backend:v1
          name: vuechatapi-backend-7l79b
          ports:
            - containerPort: 8000
          resources: {}
status: {}
