k8s/chat-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: chat-backend
  name: chat-backend
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: chat-backend
  type: LoadBalancer
status:
  loadBalancer: {}
