k8s/chat-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat
spec:
  rules:
    - host: "api.chat.rolandsobczak.pl"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: chat-backend
                port:
                  number: 80
